--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@openzeppelin/contracts": "^4.2.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
+    "truffle-hdwallet-provider": "^1.0.17",
+    "truffle-hdwallet-provider-privkey": "^0.3.0",
     "web3": "^1.5.2"
   }
 }
